fix overflow mobile device

--- a/scss/index.css
+++ b/scss/index.css
@@ -46,7 +46,7 @@ button,
 select,
 label,
 a {
-  -webkit-tap-highlight-color: transparent !important;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a:focus, a:visited, a:active {
